--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
         "dev": "bun run app/main.ts"
     },
     "dependencies": {
-        "async": "^3.2.0"
+        "async": "^3.2.0",
+        "net": "^1.0.2"
+    },
+    "devDependencies": {
+        "@types/node": "^20.12.11"
     }
 }
